// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal Component > Snapshots > should match snapshot - closed state 1`] = `<div />`;

exports[`Modal Component > Snapshots > should match snapshot - extra large size 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-4xl"
      >
        <div
          class="flex items-center justify-between p-6 border-b"
        >
          <button
            aria-label="Close modal"
            class="text-gray-400 hover:text-gray-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div>
            Extra large modal
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component > Snapshots > should match snapshot - large size 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-2xl"
      >
        <div
          class="flex items-center justify-between p-6 border-b"
        >
          <button
            aria-label="Close modal"
            class="text-gray-400 hover:text-gray-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div>
            Large modal
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component > Snapshots > should match snapshot - open state 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-lg"
      >
        <div
          class="flex items-center justify-between p-6 border-b"
        >
          <button
            aria-label="Close modal"
            class="text-gray-400 hover:text-gray-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div>
            Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component > Snapshots > should match snapshot - small size 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-md"
      >
        <div
          class="flex items-center justify-between p-6 border-b"
        >
          <button
            aria-label="Close modal"
            class="text-gray-400 hover:text-gray-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div>
            Small modal
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component > Snapshots > should match snapshot - with complex content 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-lg"
      >
        <div
          class="flex items-center justify-between p-6 border-b"
        >
          <h3
            class="text-lg font-semibold text-gray-900"
          >
            Complex Modal
          </h3>
          <button
            aria-label="Close modal"
            class="text-gray-400 hover:text-gray-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div>
            <p>
              Paragraph 1
            </p>
            <button>
              Action Button
            </button>
            <p>
              Paragraph 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component > Snapshots > should match snapshot - with title 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-lg"
      >
        <div
          class="flex items-center justify-between p-6 border-b"
        >
          <h3
            class="text-lg font-semibold text-gray-900"
          >
            Modal Title
          </h3>
          <button
            aria-label="Close modal"
            class="text-gray-400 hover:text-gray-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div>
            Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component > Snapshots > should match snapshot - without close button 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 overflow-y-auto"
  >
    <div
      class="flex min-h-full items-center justify-center p-4"
    >
      <div
        class="fixed inset-0 bg-black/50 transition-opacity"
      />
      <div
        class="relative w-full bg-white rounded-lg shadow-xl transition-all transform max-w-lg"
      >
        <div
          class="p-6"
        >
          <div>
            No close button
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
